# elevenlabs-agent-upd

./: .gitignore  README.docker.md  README.md  docker-compose.yml  setup-https.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: analysis_service.py  database.py  elevenlabs_service.py  main.py  models.py  prompts.py  schemas.py  test.py  test_openai.py
backend/app/routes/: auth.py  prompts.py  sessions.py
examples/: STRUCTURE.md  demo.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css  types.ts
frontend/src/components/: SessionHistory.tsx
frontend/src/hooks/: useAuth.ts  useConversation.ts
